--- a/finimalism7.css
+++ b/finimalism7.css
@@ -2080,13 +2080,12 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
     scroll-behavior: smooth;
     max-width: 100%;
     box-sizing: border-box;
-    scroll-snap-type: x mandatory; /* Enable mandatory snapping along the x-axis */
-	padding-right: 6em !important;
+    scroll-snap-type: x mandatory;
+    padding-right: 6em !important;
 }
 
-/* Optionally, you can define how the items should align when snapped */
 .layout-desktop #childrenContent .childrenItemsContainer.itemsContainer > * {
-    scroll-snap-align: center; /* Or any other value as per your preference */
+    scroll-snap-align: center; 
 }
 }
 
