--- a/finimalism-just-black.css
+++ b/finimalism-just-black.css
@@ -78,3 +78,24 @@
     opacity: 0.9;
     z-index: -1;
 }
+
+/*Glow accent on hover*/
+.raised.homeLibraryButton {
+	box-shadow: 0px 0px 5px rgb(255, 255, 255) !important;
+	border: solid 1px rgba(var(--accent),0) !important;
+}
+
+.paper-icon-button-light:hover, .raised.homeLibraryButton:hover, .button-flat:hover, .emby-tab-button:hover, .selectLabelFocused, .inputLabelFocused, .textareaLabelFocused, .buttonActive, .button-link {
+  color: rgb(255, 255, 255) !important;
+}
+
+.cardOverlayContainer:hover, .dialog, .toast, .raised.homeLibraryButton:hover {
+  box-shadow: 0px 0px 5px rgb(255, 255, 255);
+  border: solid 1px rgba(var(--accent),0);
+}
+
+.innerCardFooter, .countIndicator, .playedIndicator {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.95) 100%);
+  box-shadow: none;
+  color: rgb(--accent);
+}
