--- a/finimalism7.css
+++ b/finimalism7.css
@@ -643,7 +643,7 @@ progress::-webkit-progress-value {
 }
 
 .countIndicator {
-  background: rgba(var(--indicator),0.8);
+  background: linear-gradient(to right, rgba(163, 95, 198, 0.7) 0%, rgba(6, 161, 217, 0.7) 100%);
   box-shadow: none;
 }
 
@@ -1101,7 +1101,7 @@ div[data-role="controlgroup"] a[data-role="button"] {
     background-color: #00000000 !important;
   }
   .cardOverlayContainer {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.05);
   }
 }
 /* Play button hovering (for low width windows) */
@@ -1649,8 +1649,8 @@ progress::-webkit-progress-value {
 .dialog,
 .toast,
 .raised.homeLibraryButton:hover {
-  box-shadow: 0px 0px 5px rgb(var(--accent)) !important;
-  border: solid 1px rgba(var(--accent),0) !important;
+  box-shadow: 0px 0px 5px rgb(var(--accent));
+  border: solid 1px rgba(var(--accent),0);
 }
 .cardOverlayContainer {
   border: solid 1px rgba(var(--accent),0.0) !important;
@@ -1689,7 +1689,7 @@ progress::-webkit-progress-value {
   position: absolute;
   top: 0;
   right: 0;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
@@ -2402,4 +2402,17 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 
 .collectionItems .itemsContainer.padded-left::before {
 	opacity: 0;
+}
+
+.layout-desktop #childrenContent .listItemBodyText.secondary.listItem-overview.listItemBodyText {
+  transition: filter 0.8s, opacity 0.8s;
+  filter: blur(3px);
+  opacity: 0.7;
+  max-height: 9em;
+  overflow-y: auto;
+}
+
+.layout-desktop #childrenContent .listItemBodyText.secondary.listItem-overview.listItemBodyText:hover {
+	filter: blur(0px);
+	opacity: 1;
 }
