--- a/finimalism7.css
+++ b/finimalism7.css
@@ -181,7 +181,7 @@ span.homeLibraryText {
 
 /* Apply progress bar gradient */
 .itemProgressBarForeground {
-    background: linear-gradient(to right, rgba(163, 95, 198, 1) 0%, rgba(6, 161, 217, 1) 100%);
+    background: linear-gradient(90deg, rgb(40.392% 6.275% 50.98%) 0%, rgb(40.023% 6.794% 51.27%) 6.25%, rgb(38.929% 8.334% 52.13%) 12.5%, rgb(37.154% 10.835% 53.525%) 18.75%, rgb(34.764% 14.2% 55.403%) 25%, rgb(31.852% 18.3% 57.69%) 31.25%, rgb(28.53% 22.978% 60.301%) 37.5%, rgb(24.925% 28.054% 63.133%) 43.75%, rgb(21.176% 33.333% 66.078%) 50%, rgb(17.428% 38.612% 69.024%) 56.25%, rgb(13.823% 43.688% 71.856%) 62.5%, rgb(10.501% 48.366% 74.466%) 68.75%, rgb(7.589% 52.467% 76.754%) 75%, rgb(5.199% 55.832% 78.632%) 81.25%, rgb(3.423% 58.332% 80.027%) 87.5%, rgb(2.33% 59.872% 80.886%) 93.75%, rgb(1.961% 60.392% 81.176%) 100% );
 }
 
 
@@ -2079,7 +2079,7 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 /* Video Playback Progress Bar */
 .mdl-slider-background-lower,
 .mdl-slider-background-upper {
-    background: linear-gradient(to right, rgba(163, 95, 198, 0.5) 0%, rgba(6, 161, 217, 0.5) 100%);
+    background: linear-gradient(90deg, rgb(40.392% 6.275% 50.98%) 0%, rgb(40.023% 6.794% 51.27%) 6.25%, rgb(38.929% 8.334% 52.13%) 12.5%, rgb(37.154% 10.835% 53.525%) 18.75%, rgb(34.764% 14.2% 55.403%) 25%, rgb(31.852% 18.3% 57.69%) 31.25%, rgb(28.53% 22.978% 60.301%) 37.5%, rgb(24.925% 28.054% 63.133%) 43.75%, rgb(21.176% 33.333% 66.078%) 50%, rgb(17.428% 38.612% 69.024%) 56.25%, rgb(13.823% 43.688% 71.856%) 62.5%, rgb(10.501% 48.366% 74.466%) 68.75%, rgb(7.589% 52.467% 76.754%) 75%, rgb(5.199% 55.832% 78.632%) 81.25%, rgb(3.423% 58.332% 80.027%) 87.5%, rgb(2.33% 59.872% 80.886%) 93.75%, rgb(1.961% 60.392% 81.176%) 100% );
 }
 
 .layout-desktop div:not(.sectionTitleContainer-cards) > .sectionTitle-cards {
@@ -2420,4 +2420,39 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 .cardOverlayButtonIcon, .cardOverlayButtonIcon.material-icons {
   display: flex;
   filter: drop-shadow(1px -1px 1px rgba(2, 2, 2, 0.8));
+}
+
+#skipIntro .emby-button:hover, #skipIntro .emby-button:focus {
+  background: linear-gradient(to right, rgb(103, 16, 130), rgb(4, 130, 175)) !important;
+  transform: scale(1.05);
+}
+
+#skipIntro {
+  position: absolute;
+  bottom: 7em;
+  right: 7em;
+  background-color: transparent;
+}
+
+#skipIntro .emby-button {
+  color: #ffffff;
+  font-size: 100%;
+  background: rgb(0, 0, 0);
+  border: 0px solid #2c4177;
+}
+
+.skip-button {
+  display: none;
+}
+
+.upNextContainer {
+  bottom: 5em;
+}
+
+.raised.raised-mini.btnHide.upNextDialog-button.emby-button:hover {
+  background: linear-gradient(to right, rgb(103, 16, 130), rgb(4, 130, 175)) !important;
+  box-shadow: 0 0 8px rgba(var(--accent), 0.6);
+  filter: brightness(1.2);
+  background-color: #041331;
+  transform: scale(1.05);
 }
