--- a/finimalism7.css
+++ b/finimalism7.css
@@ -334,16 +334,17 @@ progress::-webkit-progress-value {
 }
 
 /*Make watched icon, footer on chapter thumbnails (and other things), and count indicator dark and transparent*/
-.innerCardFooter,
-.countIndicator, 
-.playedIndicator {
-  background: linear-gradient(to right, rgba(163, 95, 198, 0.7) 0%, rgba(6, 161, 217, 0.7) 100%);
+.innerCardFooter {
+  background: #2f1b57b8;
   box-shadow: none;
   color: rgb(--accent);
 }
 
-.countIndicator {
+.countIndicator, 
+.playedIndicator {
+  background: linear-gradient(90deg, rgb(40.392% 6.275% 50.98%) 0%, rgb(40.023% 6.794% 51.27%) 6.25%, rgb(38.929% 8.334% 52.13%) 12.5%, rgb(37.154% 10.835% 53.525%) 18.75%, rgb(34.764% 14.2% 55.403%) 25%, rgb(31.852% 18.3% 57.69%) 31.25%, rgb(28.53% 22.978% 60.301%) 37.5%, rgb(24.925% 28.054% 63.133%) 43.75%, rgb(21.176% 33.333% 66.078%) 50%, rgb(17.428% 38.612% 69.024%) 56.25%, rgb(13.823% 43.688% 71.856%) 62.5%, rgb(10.501% 48.366% 74.466%) 68.75%, rgb(7.589% 52.467% 76.754%) 75%, rgb(5.199% 55.832% 78.632%) 81.25%, rgb(3.423% 58.332% 80.027%) 87.5%, rgb(2.33% 59.872% 80.886%) 93.75%, rgb(1.961% 60.392% 81.176%) 100% );
   box-shadow: none;
+  color: rgb(--accent);
 }
 
 /*Modify subtitle settings page*/
@@ -2455,4 +2456,31 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
   filter: brightness(1.2);
   background-color: #041331;
   transform: scale(1.05);
+}
+
+/*Iskelderon's cleaner Scenes & Specials grid */
+@media (min-width:1800px) and (min-height:900px) {
+  #specialsCollapsible .emby-scroller,
+  #musicVideosCollapsible.emby-scroller,
+  #scenesCollapsible.emby-scroller {
+    margin-right: 0;
+  }
+
+  #specialsCollapsible .emby-scrollbuttons,
+  #musicVideosCollapsible .emby-scrollbuttons,
+  #scenesCollapsible .emby-scrollbuttons  {
+    display: none;
+  }
+
+  #specialsCollapsible .itemsContainer,
+  #musicVideosCollapsible .itemsContainer,
+  #scenesCollapsible .itemsContainer {
+    flex-wrap: wrap;
+  }
+
+  #specialsCollapsible .overflowBackdropCard,
+  #musicVideosCollapsible .overflowBackdropCard,
+  #scenesCollapsible .overflowBackdropCard {
+    max-width: 16.4vw;
+  }
 }
