--- a/finimalism7.css
+++ b/finimalism7.css
@@ -2487,3 +2487,7 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
     max-width: 16.4vw;
   }
 }
+
+.osdControls {
+  font-size: 1.5em;
+}
