--- a/finimalism7.css
+++ b/finimalism7.css
@@ -378,6 +378,7 @@ a[data-role="button"] {
 .navMenuOption:hover,
 .actionSheetMenuItem:hover {
   background: rgba(80, 80, 80, 0.8) !important;
+  color: #fff !important;
 }
 .paper-icon-button-light:hover {
   background-color: rgba(0, 0, 0, 0) !important;
@@ -2451,9 +2452,6 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 
 }
 
-.skip-button {
-}
-
 .upNextContainer {
 
 }
@@ -2501,8 +2499,12 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 
 
 /*Change Intro Skip Color*/
-#skipIntro .emby-button:hover,
-#skipIntro .emby-button:focus {
+.skip-button:hover,
+.skip-button:focus {
     background: linear-gradient(90deg, rgb(40.392% 6.275% 50.98%) 0%, rgb(40.023% 6.794% 51.27%) 6.25%, rgb(38.929% 8.334% 52.13%) 12.5%, rgb(37.154% 10.835% 53.525%) 18.75%, rgb(34.764% 14.2% 55.403%) 25%, rgb(31.852% 18.3% 57.69%) 31.25%, rgb(28.53% 22.978% 60.301%) 37.5%, rgb(24.925% 28.054% 63.133%) 43.75%, rgb(21.176% 33.333% 66.078%) 50%, rgb(17.428% 38.612% 69.024%) 56.25%, rgb(13.823% 43.688% 71.856%) 62.5%, rgb(10.501% 48.366% 74.466%) 68.75%, rgb(7.589% 52.467% 76.754%) 75%, rgb(5.199% 55.832% 78.632%) 81.25%, rgb(3.423% 58.332% 80.027%) 87.5%, rgb(2.33% 59.872% 80.886%) 93.75%, rgb(1.961% 60.392% 81.176%) 100% );
-    transform: scale(1.05);
+    color: #fff;
+}
+
+.skip-button {
+    transition: scale 0.5s ease-in, background 0.5s ease-in, color 0.1s ease-in;
 }
