--- a/finimalism7.css
+++ b/finimalism7.css
@@ -49,7 +49,7 @@ html {
     height: 100vh;
     background: url(https://i.imgur.com/dGBenC7.jpeg) center top no-repeat #030322;
     background-size: cover;
-    opacity: 0.75;
+    opacity: 0.85;
     z-index: -1;
     background-attachment: fixed;
 }
@@ -69,8 +69,9 @@ html {
     height: 100%;
     background: url(https://i.imgur.com/dGBenC7.jpeg) center top no-repeat #030322;
     background-size: cover;
-    opacity: 0.6;
+    opacity: 0.85;
     z-index: -1;
+	filter: saturate(45%) brightness(250%);
 }
 
 /* Apply bg to detailPage content */
@@ -88,7 +89,7 @@ html {
     height: 100%;
     background: url(https://i.imgur.com/dGBenC7.jpeg) center top no-repeat #030322;
     background-size: cover;
-    opacity: 0.8;
+    opacity: 0.85;
     z-index: -1;
 }
 
@@ -1749,7 +1750,7 @@ progress::-webkit-progress-value {
 }
 
 /*Style backdrop*/
-.backdropImage {filter: blur(0px) saturate(120%) contrast(130%) brightness(100%);}
+.backdropImage {filter: blur(0px) saturate(110%) contrast(115%) brightness(90%);}
 
 
 /* Center the listItem content */
