replace #101010 from preload

--- a/finimalism7.css
+++ b/finimalism7.css
@@ -18,7 +18,8 @@ html {
 }
 
 /* Backdrop */
-.backgroundContainer {
+.backgroundContainer, .preload {
+  background-color: #080210;
 }
 
 .itemsContainer.padded-left {
