--- a/finimalism7.css
+++ b/finimalism7.css
@@ -118,7 +118,19 @@ h2 {
 }
 
 .textActionButton {
-    font-size: 11pt
+  font-size: 11pt;
+  transition: color 0.3s, font-weight 0.3s;
+}
+
+.textActionButton:hover {
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  color: #15afe6;
+  font-weight: 700;
+}
+
+.cardText-secondary, .fieldDescription, .guide-programNameCaret, .listItem .secondary, .nowPlayingBarSecondaryText, .programSecondaryTitle, .secondaryText {
+  color: rgba(255, 255, 255, 0.75);
 }
 
 /* Movies / Shows gallery titles */
@@ -624,11 +636,6 @@ progress::-webkit-progress-value {
 
 .upNextDialog-countdownText {
   color: rgba(var(--accent));
-}
-
-.first-imageEditor-buttons, .imageEditor-buttons {
-  margin-top: 0em;
-  margin-bottom: 0em;
 }
 
 .mdl-spinner__layer-1 {
@@ -2594,4 +2601,106 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
   position: absolute;
   top: 50%;
   width: 3em;
+}
+
+.first-imageEditor-buttons, .imageEditor-buttons {
+  margin-top: 0em;
+  margin-bottom: 0em;
+}
+
+.headerTabs.sectionTabs .tabs-viewmenubar.emby-tabs.focusable.scrollX .emby-tab-button.emby-button.emby-tab-button-active {
+	background: #fff;
+	color: #000 !important;
+	border-radius: 2em;
+	height: 2em;
+	width: auto;
+	transform: translateY(-11%);
+        transition: 0s;
+}
+
+.headerTabs.sectionTabs .tabs-viewmenubar.emby-tabs.focusable.scrollX .emby-tab-button.emby-button.emby-tab-button-active .emby-button-foreground {
+	transform: translateY(-33%);
+}
+
+.headerTabs .emby-tab-button {
+    transition: 0s !important;
+	width: auto;
+	color: #fff;
+}
+
+[dir="ltr"] .pageTitle {
+	display: none;
+}
+
+#moviesTab .listItem {
+	font-size: 1.15em;
+}
+
+#moviesTab .listItemBody.itemAction {
+	max-width: 60vw;
+}
+
+#moviesTab .secondary.listItemMediaInfo {
+	width: 13vw;
+}
+
+#moviesTab .secondary.listItemMediaInfo .mediaInfoItem {
+	transform: translateX(-50%);
+	min-width: 4vw;
+}
+
+#moviesTab .secondary.listItemMediaInfo .starRatingContainer.mediaInfoItem {
+	transform: translateX(-50%);
+	min-width: 4vw;
+	margin-right: 2vw;
+}
+
+#moviesTab .secondary.listItemMediaInfo .mediaInfoItem.mediaInfoText.closedCaptionMediaInfoText {
+	transform: translateX(-50%);
+	min-width: 4vw;
+	justify-content: center;
+}
+
+#moviesTab .listViewUserDataButtons {
+	width: 13vw;
+	justify-content: space-around;
+}
+
+#seriesTab .listItem {
+	font-size: 1.15em;
+}
+
+#seriesTab .listItemBody.itemAction {
+	max-width: 60vw;
+}
+
+#seriesTab .secondary.listItemMediaInfo {
+	width: 3vw;
+}
+
+#seriesTab .secondary.listItemMediaInfo .mediaInfoItem {
+	transform: translateX(-50%);
+	min-width: 4vw;
+}
+
+#seriesTab .secondary.listItemMediaInfo .starRatingContainer.mediaInfoItem {
+	transform: translateX(-50%);
+	min-width: 4vw;
+	margin-right: 2vw;
+}
+
+#seriesTab .secondary.listItemMediaInfo .mediaInfoItem.mediaInfoText.closedCaptionMediaInfoText {
+	transform: translateX(-50%);
+	min-width: 4vw;
+	justify-content: center;
+}
+
+#seriesTab .listViewUserDataButtons {
+	width: 13vw;
+	justify-content: space-around;
+}
+
+
+#genresTab .portraitCard, .squareCard {
+    width: 11%;
 }
